Ensure that the parameters are set to non-null values
So that they are recognized as parameters

--- a/viz_scripts/timeseries_analysis.ipynb
+++ b/viz_scripts/timeseries_analysis.ipynb
@@ -1,15 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "alive-integration",
+   "metadata": {},
+   "source": [
+    "These are the input parameters for the notebook. They will be automatically changed when the scripts to generate monthly statistics are run. You can modify them manually to generate multiple plots locally as well.\n",
+    "\n",
+    "Pass in `None` to remove the filters and plot all data. This is not recommended for production settings, but might be useful for reports based on data snapshots."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
-    "program = \"prepilot\"\n",
-    "user_id_plot = '9910245f-ee4e-4cca-ab4c-dd2312eb0d5d'"
+    "year = 2020\n",
+    "month = 11\n",
+    "program = \"prepilot\""
    ]
   },
   {
@@ -266,7 +275,7 @@
     "plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Net Daily Emissions (All Users)', xlabel='Date', ylabel='Emissions (lb CO2/day/user)')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Net Daily Emissions (All Users, excluding air)', xlabel='Date', ylabel='Emissions (lb CO2/day/user)')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_emissions_user%s.png\" % file_suffix)"
@@ -284,7 +293,7 @@
     "plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Net Daily Energy (All Users)', xlabel='Date', ylabel='Energy (kWH/day/user)')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Net Daily Energy (All Users, excluding air)', xlabel='Date', ylabel='Energy (kWH/day/user)')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_energy_user%s.png\" % file_suffix)"
@@ -303,7 +312,7 @@
     "plot_data = emissions.groupby(['date_time'], as_index=False)['CO2_per_mile'].agg(['mean'])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='mean').set(title='Average Daily Emission Rate (All Users)', xlabel='Date', ylabel='Emissions (lb CO2/mile/day)')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='mean').set(title='Average Daily Emission Rate (All Users, excluding air)', xlabel='Date', ylabel='Emissions (lb CO2/mile/day)')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_emissions_vmt%s.png\" % file_suffix)"
