Use the timeseries for the time period so far + display quality text

--- a/viz_scripts/timeseries_analysis.ipynb
+++ b/viz_scripts/timeseries_analysis.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "alive-integration",
    "metadata": {},
    "source": [
     "These are the input parameters for the notebook. They will be automatically changed when the scripts to generate monthly statistics are run. You can modify them manually to generate multiple plots locally as well.\n",
@@ -19,6 +18,15 @@
     "year = 2020\n",
     "month = 11\n",
     "program = \"prepilot\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install seaborn"
    ]
   },
   {
@@ -88,7 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tq = scaffolding.get_time_query(year, month)"
+    "# hardcoding this to None, None, since these are timeseries plots\n",
+    "tq = scaffolding.get_time_query(None, None)"
    ]
   },
   {
@@ -275,7 +284,7 @@
     "plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Net Daily Emissions (All Users, excluding air)', xlabel='Date', ylabel='Emissions (lb CO2/day/user)')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Net Daily Emissions (All Users, excluding air)\\n%s'%quality_text, xlabel='Date', ylabel='Emissions (lb CO2/day/user)')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_emissions_user%s.png\" % file_suffix)"
@@ -293,7 +302,7 @@
     "plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Net Daily Energy (All Users, excluding air)', xlabel='Date', ylabel='Energy (kWH/day/user)')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Net Daily Energy (All Users, excluding air)\\n%s'%quality_text, xlabel='Date', ylabel='Energy (kWH/day/user)')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_energy_user%s.png\" % file_suffix)"
@@ -312,27 +321,10 @@
     "plot_data = emissions.groupby(['date_time'], as_index=False)['CO2_per_mile'].agg(['mean'])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='mean').set(title='Average Daily Emission Rate (All Users, excluding air)', xlabel='Date', ylabel='Emissions (lb CO2/mile/day)')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='mean').set(title='Average Daily Emission Rate (All Users, excluding air)\\n%s'%quality_text, xlabel='Date', ylabel='Emissions (lb CO2/mile/day)')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_emissions_vmt%s.png\" % file_suffix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot of all mode shares for single individual\n",
-    "plot_data = mode_counts[mode_counts['user_id']==UUID(user_id_plot)]\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='trip_count_smooth', hue='Mode_confirm', style='Mode_confirm', palette='Set1').set(title=f'Mode Share (User {user_id_plot})', xlabel='Date', ylabel='Trip Count')\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.subplots_adjust(bottom=0.25)\n",
-    "plt.legend(loc='center left', title='Confirmed Mode')\n",
-    "ax.figure.savefig(\"/plots/ts_mode_share%s.png\" % file_suffix)"
    ]
   },
   {
@@ -345,7 +337,7 @@
     "plot_data = active_users\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='active_users').set(title='Number of Active Users', xlabel='Date', ylabel='Unique IDs')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='active_users').set(title='Number of Active Users\\n%s'%quality_text, xlabel='Date', ylabel='Unique IDs')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_users%s.png\" % file_suffix)"
@@ -362,7 +354,7 @@
     "plot_data = plot_data.groupby(['date_time'], as_index=False)['trip_count_smooth'].agg(['sum'])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Daily E-Bike Trips', xlabel='Date', ylabel='Trip Count')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Daily E-Bike Trips\\n%s'%quality_text, xlabel='Date', ylabel='Trip Count')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_ebike_share%s.png\" % file_suffix)"
@@ -379,7 +371,7 @@
     "plot_data = plot_data.groupby(['date_time'], as_index=False)['distance_miles'].agg(['sum'])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Daily E-Bike Mileage', xlabel='Date', ylabel='Miles')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='sum').set(title='Daily E-Bike Mileage\\n%s'%quality_text, xlabel='Date', ylabel='Miles')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_ebike_miles%s.png\" % file_suffix)"
@@ -398,7 +390,7 @@
     "plot_data['mileage_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='mileage_per_user').set(title='Daily E-Bike Mileage per Active User', xlabel='Date', ylabel='miles/user')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='mileage_per_user').set(title='Daily E-Bike Mileage per Active User\\n%s'%quality_text, xlabel='Date', ylabel='miles/user')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_ebike_miles_user%s.png\" % file_suffix)"
