--- a/viz_scripts/mapping_dictionaries.ipynb
+++ b/viz_scripts/mapping_dictionaries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "available-fusion",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "obvious-chapter",
    "metadata": {},
    "outputs": [],
@@ -29,16 +29,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "younger-indication",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'df_EI' (DataFrame)\n",
+      "Stored 'dic_re' (dict)\n",
+      "Stored 'dic_pur' (dict)\n",
+      "Stored 'dic_fuel' (dict)\n"
+     ]
+    }
+   ],
    "source": [
     "%store df_EI \n",
     "%store dic_re \n",
     "%store dic_pur \n",
     "%store dic_fuel "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "disciplinary-prediction",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
