--- a/viz_scripts/timeseries_analysis.ipynb
+++ b/viz_scripts/timeseries_analysis.ipynb
@@ -446,9 +446,7 @@
    "source": [
     "# Plot of mode share proportions across all users\n",
     "# Consolidate modes\n",
-    "plot_data = mode_counts.replace('Car, drove alone', 'Car')\n",
-    "plot_data = plot_data.replace('Car, with others', 'Car')\n",
-    "plot_data = plot_data.replace('Bikeshare', 'Shared Micromobility')\n",
+    "plot_data = mode_counts.replace('Bikeshare', 'Shared Micromobility')\n",
     "plot_data = plot_data.replace('Scooter share', 'Shared Micromobility')\n",
     "plot_data = plot_data.replace('Regular Bike', 'Personal Micromobility')\n",
     "plot_data = plot_data.replace('Skate board', 'Personal Micromobility')\n",
@@ -467,7 +465,8 @@
     "# Re-establish categorical variable to not include Other and Non-trips\n",
     "plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
     "plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm,\n",
-    "                                   categories=['Car',\n",
+    "                                   categories=['Car, drove alone',\n",
+    "                                              'Car, with others',\n",
     "                                              'Shared Micromobility',\n",
     "                                              'Personal Micromobility',\n",
     "                                              'Transit',\n",
@@ -476,11 +475,36 @@
     "                                              'E-Bike'])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='trip_proportion', hue='Mode_confirm').set(title='Daily Aggregate Mode Share\\n%s'%quality_text, xlabel='Date', ylabel='Proportion of All Trips')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='trip_proportion', hue='Mode_confirm').set(title='Daily Aggregate Mode Share (excluding \"Other\" and \"Not a trip\"\\n%s'%quality_text, xlabel='Date', ylabel='Proportion of All Trips')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
-    "plt.legend(loc='center left', title='Confirmed Mode')\n",
+    "plt.legend(bbox_to_anchor=(1.02, 1), loc='best', borderaxespad=0, title='Confirmed Mode')\n",
     "ax.figure.savefig(\"/plots/ts_all_modes%s.png\"%file_suffix, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_data = mode_counts\n",
+    "\n",
+    "plot_data_ebike = plot_data[plot_data.Mode_confirm == \"Pilot ebike\"].groupby(['date_time', 'user_id'], as_index=False)[\"trip_count_smooth\"].sum()\n",
+    "# plot_data_ebike[plot_data_ebike.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['trip_count_smooth'].sum()\n",
+    "# plot_data[plot_data.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.merge(plot_data_ebike, on=['date_time', 'user_id'])\n",
+    "# plot_data.loc[24]\n",
+    "plot_data['bike_trip_proportion'] = plot_data['trip_count_smooth_y'] / plot_data['trip_count_smooth_x']\n",
+    "# plot_data.dropna()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(16,4))\n",
+    "# sns.lineplot(ax=ax, data=plot_data, x='week', y='miles_proportion', hue=\"user_id\", legend=False).set(title='Daily Ebike Mileage Proportion (Individual)\\n%s'%quality_text, xlabel='Week of Year', ylabel='Proportion of User Daily Miles')\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='bike_trip_proportion', legend=False).set(title='Daily Ebike Trip Proportion for Individual users (Running average and variation)\\n%s'%quality_text, xlabel='Date', ylabel='Proportion of Daily Trips')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)\n",
+    "ax.figure.savefig(\"/plots/ts_ebike_mile_individual_variation%s.png\"%file_suffix, bbox_inches='tight')"
    ]
   },
   {
@@ -491,25 +515,96 @@
    "source": [
     "# Plot of ebike mode share across many individual users\n",
     "# Add weekly grouping to smooth out variation between points\n",
+    "# This explores plotting as bar plots\n",
     "mode_distance['week'] = [x.week for x in mode_distance['date_time']]\n",
     "\n",
-    "# This plot is a little crazy if the number of users displayed is not limited\n",
-    "# For now use the first 20 IDs\n",
-    "test_uuids = pd.unique(mode_distance['user_id'])[:19]\n",
-    "plot_data = mode_distance[mode_distance['user_id'].isin(test_uuids)]\n",
-    "plot_data = plot_data[plot_data['Mode_confirm']=='Pilot ebike']\n",
-    "plot_data = plot_data.groupby(['user_id','week'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "total_miles = mode_distance.groupby(['user_id','week'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "plot_data = plot_data.merge(total_miles, on=['user_id','week'])\n",
-    "plot_data['miles_proportion'] = plot_data['distance_miles_smooth_x'] / plot_data['distance_miles_smooth_y']\n",
+    "plot_data = mode_counts\n",
+    "\n",
+    "plot_data_ebike = plot_data[plot_data.Mode_confirm == \"Pilot ebike\"].groupby(['date_time', 'user_id'], as_index=False)[\"trip_count_smooth\"].sum()\n",
+    "# plot_data_ebike[plot_data_ebike.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['trip_count_smooth'].sum()\n",
+    "# plot_data[plot_data.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.merge(plot_data_ebike, on=['date_time', 'user_id'])\n",
+    "# plot_data.loc[24]\n",
     "plot_data['user_id'] = plot_data['user_id'].astype(str).str[-4:]\n",
+    "plot_data['date_time'] = pd.DatetimeIndex(plot_data.date_time)\n",
+    "month_groups = plot_data.groupby(pd.Grouper(freq='M', key=\"date_time\"))\n",
+    "plot_data = pd.DataFrame()\n",
+    "for k, month_df in month_groups:\n",
+    "    month_user_counts = month_df.groupby(\"user_id\").sum()\n",
+    "    month_user_counts[\"ebike_trip_proportion\"] = month_user_counts.trip_count_smooth_y / month_user_counts.trip_count_smooth_x\n",
+    "    month_user_counts[\"date_month\"] = [k] * len(month_user_counts)\n",
+    "    month_user_counts[\"user_id\"] = month_user_counts.index\n",
+    "    plot_data = plot_data.append(month_user_counts)\n",
+    "    \n",
+    "# plot_data\n",
+    "plot_data.reset_index(drop=True, inplace=True)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "sns.lineplot(ax=ax, data=plot_data, x='week', y='miles_proportion', hue='user_id', legend=False, palette=\"Set1\").set(title='Daily Ebike Mileage Proportion (Individual)\\n%s'%quality_text, xlabel='Week of Year', ylabel='Proportion of User Daily Miles')\n",
+    "sns.barplot(ax=ax, data=plot_data, x='date_month', y='ebike_trip_proportion', hue=\"user_id\").set(title='Daily Ebike Trip Count Proportion (Individual)\\n%s'%quality_text, xlabel='Date', ylabel='Proportion of User Monthly Trips')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
-    "ax.figure.savefig(\"/plots/ts_ebike_mile_individual%s.png\"%file_suffix, bbox_inches='tight')"
+    "# ax.figure.savefig(\"/plots/ts_ebike_trip_individual%s.png\"%file_suffix, bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This explores plotting the same data as a line plot\n",
+    "fig, ax = plt.subplots(figsize=(16,4))\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_month', y='ebike_trip_proportion', hue=\"user_id\").set(title='Daily Ebike Trip Count Proportion (Individual)\\n%s'%quality_text, xlabel='Week of Year', ylabel='Proportion of User Daily Miles')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot of ebike mode share across many individual users\n",
+    "# Add weekly grouping to smooth out variation between points\n",
+    "# Both the bar plot and the line plot above are confusing, so we will try plotting subplots instead\n",
+    "mode_distance['week'] = [x.week for x in mode_distance['date_time']]\n",
+    "\n",
+    "plot_data = mode_counts\n",
+    "\n",
+    "plot_data_ebike = plot_data[plot_data.Mode_confirm == \"Pilot ebike\"].groupby(['date_time', 'user_id'], as_index=False)[\"trip_count_smooth\"].sum()\n",
+    "# plot_data_ebike[plot_data_ebike.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['trip_count_smooth'].sum()\n",
+    "# plot_data[plot_data.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.merge(plot_data_ebike, on=['date_time', 'user_id'])\n",
+    "# plot_data.loc[24]\n",
+    "plot_data['user_id'] = plot_data['user_id'].astype(str).str[-4:]\n",
+    "plot_data['date_time'] = pd.DatetimeIndex(plot_data.date_time)\n",
+    "unique_user_ids = plot_data.user_id.unique()\n",
+    "row_count=len(unique_user_ids)//5 + 1\n",
+    "fig, ax_arr = plt.subplots(ncols=5, nrows=row_count, figsize=(16,4*row_count),sharex=True,sharey=True)\n",
+    "flattened_ax_arr = list(itertools.chain.from_iterable(ax_arr))\n",
+    "for i, (user_id, user_df) in enumerate(plot_data.groupby(\"user_id\")):\n",
+    "    month_count_df = user_df.groupby(pd.Grouper(freq='M', key=\"date_time\")).sum()\n",
+    "    # print(month_count_df)\n",
+    "    month_count_df[\"ebike_trip_proportion\"] = month_count_df.trip_count_smooth_y / month_count_df.trip_count_smooth_x\n",
+    "    # print(month_count_df)\n",
+    "    sns.lineplot(ax=flattened_ax_arr[i],data=month_count_df.ebike_trip_proportion).set(title=user_id)\n",
+    "    flattened_ax_arr[i].tick_params(axis='x', rotation=45)\n",
+    "\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)\n",
+    "fig.suptitle('Daily Ebike Trip Count Proportion (Individual)\\n%s'%quality_text)\n",
+    "fig.savefig(\"/plots/ts_ebike_trip_individual%s.png\"%file_suffix, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
