Check in milage equivalents of the individual variation plots
Originally checked in in 19c21daff485e9686cc11e47a1568f2e35f9d01b

--- a/viz_scripts/timeseries_analysis.ipynb
+++ b/viz_scripts/timeseries_analysis.ipynb
@@ -488,6 +488,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plots the number of trips per user with error bars\n",
+    "# from the seaborn documentation:\n",
+    "# By default, the plot aggregates over multiple y values at each value of x and \n",
+    "# shows an estimate of the central tendency and a confidence interval for that estimate.\n",
+    "# In our case, we have multiple trip proportions (one per user) for each day\n",
+    "# so the band represents the variation of the number of trips and the thick line represents the mean/median (unsure which)\n",
+    "# but this still doesn't tell us which users have dropped their ridership\n",
+    "\n",
     "plot_data = mode_counts\n",
     "\n",
     "plot_data_ebike = plot_data[plot_data.Mode_confirm == \"Pilot ebike\"].groupby(['date_time', 'user_id'], as_index=False)[\"trip_count_smooth\"].sum()\n",
@@ -500,8 +508,39 @@
     "# plot_data.dropna()\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(16,4))\n",
-    "# sns.lineplot(ax=ax, data=plot_data, x='week', y='miles_proportion', hue=\"user_id\", legend=False).set(title='Daily Ebike Mileage Proportion (Individual)\\n%s'%quality_text, xlabel='Week of Year', ylabel='Proportion of User Daily Miles')\n",
     "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='bike_trip_proportion', legend=False).set(title='Daily Ebike Trip Proportion for Individual users (Running average and variation)\\n%s'%quality_text, xlabel='Date', ylabel='Proportion of Daily Trips')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)\n",
+    "ax.figure.savefig(\"/plots/ts_ebike_trip_individual_variation%s.png\"%file_suffix, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plots the number of trips per user with error bars\n",
+    "# from the seaborn documentation:\n",
+    "# By default, the plot aggregates over multiple y values at each value of x and \n",
+    "# shows an estimate of the central tendency and a confidence interval for that estimate.\n",
+    "# In our case, we have multiple trip proportions (one per user) for each day\n",
+    "# so the band represents the variation of the number of trips and the thick line represents the mean/median (unsure which)\n",
+    "# but this still doesn't tell us which users have dropped their ridership\n",
+    "\n",
+    "plot_data = mode_distance\n",
+    "\n",
+    "plot_data_ebike = plot_data[plot_data.Mode_confirm == \"Pilot ebike\"].groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
+    "# plot_data_ebike[plot_data_ebike.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
+    "# plot_data[plot_data.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.merge(plot_data_ebike, on=['date_time', 'user_id'])\n",
+    "# plot_data.loc[24]\n",
+    "plot_data['bike_miles_proportion'] = plot_data['distance_miles_smooth_y'] / plot_data['distance_miles_smooth_x']\n",
+    "# plot_data.dropna()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(16,4))\n",
+    "sns.lineplot(ax=ax, data=plot_data, x='date_time', y='bike_miles_proportion', legend=False).set(title='Daily Ebike Mileage Proportion for Individual users (Running average and variation)\\n%s'%quality_text, xlabel='Date', ylabel='Proportion of Daily Miles')\n",
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "ax.figure.savefig(\"/plots/ts_ebike_mile_individual_variation%s.png\"%file_suffix, bbox_inches='tight')"
@@ -516,7 +555,7 @@
     "# Plot of ebike mode share across many individual users\n",
     "# Add weekly grouping to smooth out variation between points\n",
     "# This explores plotting as bar plots\n",
-    "mode_distance['week'] = [x.week for x in mode_distance['date_time']]\n",
+    "# Plotting this on a daily basis can get too fine-grained so we try grouping by month\n",
     "\n",
     "plot_data = mode_counts\n",
     "\n",
@@ -569,7 +608,6 @@
     "# Plot of ebike mode share across many individual users\n",
     "# Add weekly grouping to smooth out variation between points\n",
     "# Both the bar plot and the line plot above are confusing, so we will try plotting subplots instead\n",
-    "mode_distance['week'] = [x.week for x in mode_distance['date_time']]\n",
     "\n",
     "plot_data = mode_counts\n",
     "\n",
@@ -596,7 +634,45 @@
     "plt.xticks(rotation=45)\n",
     "plt.subplots_adjust(bottom=0.25)\n",
     "fig.suptitle('Daily Ebike Trip Count Proportion (Individual)\\n%s'%quality_text)\n",
-    "fig.savefig(\"/plots/ts_ebike_trip_individual%s.png\"%file_suffix, bbox_inches='tight')"
+    "fig.savefig(\"/plots/ts_ebike_trip_proportion_individual%s.png\"%file_suffix, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot of ebike mode share across many individual users\n",
+    "# Add weekly grouping to smooth out variation between points\n",
+    "# Both the bar plot and the line plot above are confusing, so we will try plotting subplots instead\n",
+    "\n",
+    "plot_data = mode_distance\n",
+    "\n",
+    "plot_data_ebike = plot_data[plot_data.Mode_confirm == \"Pilot ebike\"].groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
+    "# plot_data_ebike[plot_data_ebike.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
+    "# plot_data[plot_data.trip_count_smooth != 0]\n",
+    "plot_data = plot_data.merge(plot_data_ebike, on=['date_time', 'user_id'])\n",
+    "# plot_data.loc[24]\n",
+    "plot_data['user_id'] = plot_data['user_id'].astype(str).str[-4:]\n",
+    "plot_data['date_time'] = pd.DatetimeIndex(plot_data.date_time)\n",
+    "unique_user_ids = plot_data.user_id.unique()\n",
+    "row_count=len(unique_user_ids)//5 + 1\n",
+    "fig, ax_arr = plt.subplots(ncols=5, nrows=row_count, figsize=(16,4*row_count),sharex=True,sharey=True)\n",
+    "flattened_ax_arr = list(itertools.chain.from_iterable(ax_arr))\n",
+    "for i, (user_id, user_df) in enumerate(plot_data.groupby(\"user_id\")):\n",
+    "    month_count_df = user_df.groupby(pd.Grouper(freq='M', key=\"date_time\")).sum()\n",
+    "    # print(month_count_df)\n",
+    "    month_count_df[\"ebike_miles_proportion\"] = month_count_df.distance_miles_smooth_y / month_count_df.distance_miles_smooth_x\n",
+    "    # print(month_count_df)\n",
+    "    sns.lineplot(ax=flattened_ax_arr[i],data=month_count_df.ebike_miles_proportion).set(title=user_id)\n",
+    "    flattened_ax_arr[i].tick_params(axis='x', rotation=45)\n",
+    "\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.subplots_adjust(bottom=0.25)\n",
+    "fig.suptitle('Daily Ebike Mileage Proportion (Individual)\\n%s'%quality_text)\n",
+    "fig.savefig(\"/plots/ts_ebike_mile_proportion_individual%s.png\"%file_suffix, bbox_inches='tight')"
    ]
   },
   {
