Flip no_inferred_label and inferred_label + start investigating inferred_label fill

--- a/viz_scripts/biogeme_test.ipynb
+++ b/viz_scripts/biogeme_test.ipynb
@@ -259,9 +259,18 @@
     "# how much data without labels and with and without label assist\n",
     "no_user_label_ct_df = expanded_ct[pd.isna(expanded_ct.mode_confirm)]\n",
     "print(\"Trips without user specified labels\", len(no_user_label_ct_df))\n",
-    "is_empty_check = lambda ll: len(ll) > 0\n",
+    "is_empty_check = lambda ll: len(ll) == 0\n",
     "print(\"Trips without user label but with inferred label\", len(no_user_label_ct_df[~no_user_label_ct_df.inferred_labels.apply(is_empty_check)]))\n",
     "print(\"Trips without user label or inferred label\", len(no_user_label_ct_df[no_user_label_ct_df.inferred_labels.apply(is_empty_check)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_user_label_ct_df[no_user_label_ct_df.inferred_labels.apply(is_empty_check)][[\"inferred_labels\", \"start_fmt_time\", \"end_fmt_time\", \"mode_confirm\", \"purpose_confirm\"]].head()"
    ]
   },
   {
@@ -283,15 +292,41 @@
    "source": [
     "# Apply label assist mode where not filled in\n",
     "\n",
-    "# inferred_modes = []\n",
-    "# for i in range(0,len(expanded_all_ct)):\n",
-    "#     try:\n",
-    "#         inferred_modes.append(expanded_all_ct['inferred_labels'].iloc[i][0]['labels']['mode_confirm'])\n",
-    "#     except:\n",
-    "#         inferred_modes.append(None)\n",
+    "inferred_modes = []\n",
+    "for i in range(0,len(expanded_ct)):\n",
+    "    try:\n",
+    "        inferred_modes.append(expanded_all_ct['inferred_labels'].iloc[i][0]['labels']['mode_confirm'])\n",
+    "    except:\n",
+    "        inferred_modes.append(None)\n",
     "\n",
-    "# expanded_all_ct['Inferred_mode'] = inferred_modes\n",
-    "# expanded_all_ct.mode_confirm.fillna(expanded_all_ct.Inferred_mode, inplace=True)"
+    "print(inferred_modes[0:10])\n",
+    "        \n",
+    "with_inferred_ct = expanded_ct.copy()\n",
+    "with_inferred_ct['Inferred_mode'] = inferred_modes\n",
+    "with_inferred_ct.mode_confirm.fillna(with_inferred_ct.Inferred_mode, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's check whether the inferred mode is filled in correctly\n",
+    "# https://github.com/zackAemmer/em-public-dashboard/pull/1#issuecomment-1198195501\n",
+    "\n",
+    "for i, im in enumerate(inferred_modes):\n",
+    "    if im is None:\n",
+    "        print(f\"Found no inferred mode at {i}, dataframe entry is %s\" % with_inferred_ct.iloc[i].mode_confirm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct = scaffolding.filter_labeled_trips(expanded_ct)"
    ]
   },
   {
