Put the parameters for the run upfront
+ put the switch to flip at the top and flip based on it in the model creation
+ create a function to pull out the sensed primary mode, but don't use it yet

--- a/viz_scripts/biogeme_test.ipynb
+++ b/viz_scripts/biogeme_test.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "year = None\n",
     "month = None\n",
-    "program = \"prepilot\""
+    "program = \"prepilot\"\n",
+    "include_replaced_modes_as_valid = False # Flip this when we want to get results versus generate the replaced_mode correction graphs\n",
+    "input_dataset = \"ONLY_LABELED\" # Or \"ONLY_SENSED\" or \"BEST_AVAILABLE\""
    ]
   },
   {
@@ -270,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_user_label_ct_df[no_user_label_ct_df.inferred_labels.apply(is_empty_check)][[\"inferred_labels\", \"start_fmt_time\", \"end_fmt_time\", \"mode_confirm\", \"purpose_confirm\"]].head()"
+    "no_user_label_ct_df[no_user_label_ct_df.inferred_labels.apply(is_empty_check)][[\"inferred_labels\", \"start_fmt_time\", \"end_fmt_time\", \"mode_confirm\", \"purpose_confirm\", \"user_id\"]].head()"
    ]
   },
   {
@@ -290,8 +292,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply label assist mode where not filled in\n",
+    "# Copied from https://github.com/allenmichael099/e-mission-eval-private-data/blob/hybrid_labeling_analysis_Michael/Error_bars/add_new_label_fields.py#L45\n",
+    "# TODO: Need to clean up later instead of copy-paste\n",
+    "def get_primary_mode(ct_row):\n",
+    "    # These keys were found in emission/core/wrapper/modeprediction.py:\n",
+    "    sensed_mode_types = {0: \"unknown\", 1: \"walk\",2: \"p_micro\",\n",
+    "                     3: \"transit\", 4: \"transit\", 5: \"car\", 6: \"air_or_hsr\",\n",
+    "                     7: \"transit\", 8: \"transit\", 9: \"transit\"}\n",
     "\n",
+    "    # Get the segments for the trip.\n",
+    "    #cleaned_section will only have walk/bike/automotive, inferred_section is the one that has bus/train/car etc \n",
+    "    segments = esdt.get_sections_for_trip(key = \"analysis/inferred_section\", user_id = ct_row[\"user_id\"], trip_id = ct_row['cleaned_trip'])\n",
+    "\n",
+    "    # get pairs of mode type and duration\n",
+    "    trip_mode_durations = {}\n",
+    "    total_dur = 0\n",
+    "    for s in segments:\n",
+    "        # the sensed mode is a number in the database, so I'm relabeling it as a string.\n",
+    "        mode = sensed_mode_types[s['data']['sensed_mode']]\n",
+    "        duration = s['data']['duration']\n",
+    "\n",
+    "        if mode not in trip_mode_durations.keys(): trip_mode_durations[mode] = 0\n",
+    "        trip_mode_durations[mode] += duration\n",
+    "\n",
+    "        total_dur += duration\n",
+    "    # convert the durations to fractions of the total segment moving time (not the trip time, since trips include stop times)\n",
+    "    # output is something like {'bicycling': 0.3244066758052265, 'walking': 0.6755933241947736}\n",
+    "    mode_split_map = pd.Series({mode: duration/total_dur  for mode,duration in trip_mode_durations.items()})\n",
+    "    primary_mode = mode_split_map.index[mode_split_map.argmax()]\n",
+    "    return primary_mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# small unit test\n",
+    "# mode_split_map = pd.Series({'bicycling': 0.3244066758052265, 'walking': 0.6755933241947736})\n",
+    "# mode_split_map.index[mode_split_map.argmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply label assist mode where not filled in\n",
     "inferred_modes = []\n",
     "for i in range(0,len(expanded_ct)):\n",
     "    try:\n",
@@ -558,8 +607,11 @@
     "            options = [availability_codes[x] for x in available.split(';')]\n",
     "            # Chosen mode must be in the available modes list, if mode was chosen it is assumed available\n",
     "            # SWAP THIS LINE TO INCLUDE REPLACED MODE IN THE CHOICE SET (FOR VISUALS AT END)\n",
-    "            if mode in options or mode==choice_list[i] or mode==replaced_list[i]:\n",
-    "#             if mode in options or mode==choice_list[i]:\n",
+    "            if include_replaced_modes_as_valid:\n",
+    "                mode_check = lambda mode: mode in options or mode==choice_list[i] or mode==replaced_list[i]\n",
+    "            else:\n",
+    "                mode_check = lambda mode: mode in options or mode==choice_list[i]\n",
+    "            if mode_check(mode):\n",
     "                mode_avail.append(1)\n",
     "            else:\n",
     "                mode_avail.append(0)\n",
