Add labels for the graphs

--- a/viz_scripts/Program_trip_characteristics.ipynb
+++ b/viz_scripts/Program_trip_characteristics.ipynb
@@ -231,7 +231,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_user_summary_df.label_pct.plot(kind=\"bar\", xticks=[])"
+    "ax=label_user_summary_df.label_pct.plot(kind=\"bar\", xticks=[])\n",
+    "ax.set_xlabel(\"user\")\n",
+    "ax.set_ylabel(\"Percentage of trips labeled\")\n",
+    "ax.set_title(\"Percentage of trips labeled by each user\")"
    ]
   },
   {
@@ -275,7 +278,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flattened_label_user_summary_df.dropna().sort_values(by=\"label_pct\").plot.bar(y=\"label_pct\", xticks=[])"
+    "ax = flattened_label_user_summary_df.dropna().sort_values(by=\"label_pct\").label_pct.plot.bar(y=\"label_pct\", xticks=[])\n",
+    "ax.set_xlabel(\"user\")\n",
+    "ax.set_ylabel(\"Percentage of trips labeled\")\n",
+    "ax.set_title(\"Percentage of trips labeled by user\")"
    ]
   },
   {
@@ -295,7 +301,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.barplot(data=flattened_label_user_summary_df, x=\"program\", y=\"label_pct\")"
+    "ax=sns.barplot(data=flattened_label_user_summary_df, x=\"program\", y=\"label_pct\")\n",
+    "ax.set_ylabel(\"Percentage of trips labeled\")\n",
+    "ax.set_title(\"Mean labeling rate and variance per program\")"
    ]
   },
   {
