Add textual descriptions as well

--- a/viz_scripts/Program_trip_characteristics.ipynb
+++ b/viz_scripts/Program_trip_characteristics.ipynb
@@ -38,6 +38,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "martial-rotation",
+   "metadata": {},
+   "source": [
+    "### Load"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "thermal-america",
@@ -133,6 +141,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "following-poultry",
+   "metadata": {},
+   "source": [
+    "### Transform"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "naval-blake",
@@ -196,16 +212,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "qualified-success",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_summary_df.label_pct.plot(kind=\"bar\", ylabel=\"% of labeled trips\", title=\"Variation in labeling percentage across programs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "enabling-slide",
    "metadata": {},
    "outputs": [],
@@ -222,6 +228,24 @@
    "source": [
     "label_user_summary_df[\"label_pct\"] = (label_user_summary_df.labeled_trips / label_user_summary_df.total_trips) * 100\n",
     "label_user_summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hidden-choice",
+   "metadata": {},
+   "source": [
+    "### Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "qualified-success",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_summary_df.label_pct.plot(kind=\"bar\", ylabel=\"% of labeled trips\", title=\"Variation in labeling percentage across programs\")"
    ]
   },
   {
@@ -307,9 +331,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "wired-musical",
+   "metadata": {},
+   "source": [
+    "### Describe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prescription-rocket",
+   "id": "imported-polyester",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def describe_label_info(df):\n",
+    "    print(f\"Total number of trips {len(df)} from {len(df.user_id.unique())} unique users\")\n",
+    "    print(f\"Number of trips with at least one label {len(df[df.user_input != {}])} from {len(df[df.user_input != {}].user_id.unique())} unique users\")\n",
+    "    no_user_label_ct_df = df[df.user_input == {}]\n",
+    "    print(f\"Trips without user specified labels {len(no_user_label_ct_df)} from {len(no_user_label_ct_df.user_id.unique())} users\")\n",
+    "    is_empty_check = lambda ll: len(ll) == 0\n",
+    "    print(f\"Trips without user label but with inferred label {len(no_user_label_ct_df[~no_user_label_ct_df.inferred_labels.apply(is_empty_check)])}\")\n",
+    "    print(f\"Trips without user label or inferred label {len(no_user_label_ct_df[no_user_label_ct_df.inferred_labels.apply(is_empty_check)])}\")\n",
+    "    stage_df = df[df.program == 'stage']\n",
+    "    print(f\"Number of trips in stage = {len(df[df.program=='stage'])} from {len(df[df.program=='stage'].user_id.unique())} unique users\")\n",
+    "    print(f\"Number of trips in real programs = {len(df[df.program!='stage'])} from {len(df[df.program!='stage'].user_id.unique())} unique users\")\n",
+    "    trip_count_df = df.groupby(\"program\").source.count()\n",
+    "    user_count_df = df.groupby(\"program\").user_id.unique().apply(lambda unique_list: len(unique_list))\n",
+    "    # print(trip_count_df)\n",
+    "    # print(user_count_df)\n",
+    "    count_df = pd.DataFrame({\"trips\": trip_count_df, \"unique_users\": user_count_df})\n",
+    "    # print(count_df)\n",
+    "    print(f\"Program specific counts: \", count_df.to_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fantastic-shell",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "describe_label_info(trip_program_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "productive-rider",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "describe_label_info(labeled_ct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "soviet-vacation",
    "metadata": {},
    "outputs": [],
    "source": []
