New emissions calculations

--- a/viz_scripts/biogeme_test.ipynb
+++ b/viz_scripts/biogeme_test.ipynb
@@ -1635,10 +1635,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# From table in paper\n",
-    "emission_rates = [343.3, 18.5, 343.3, (343.3/2), 39.8, 123.8, 0.0]\n",
-    "subst_rates = plot_data['subst_rate'].values\n",
-    "subst_rates"
+    "# From df_EI\n",
+    "# Combine variable categories\n",
+    "df_EI = df_EI.replace('Car, drove alone', 'car')\n",
+    "df_EI = df_EI.replace('Car, with others', 's_car')\n",
+    "df_EI = df_EI.replace('Bikeshare', 's_micro')\n",
+    "df_EI = df_EI.replace('Scooter share', 's_micro')\n",
+    "df_EI = df_EI.replace('Regular Bike', 'p_micro')\n",
+    "df_EI = df_EI.replace('Skate board', 'p_micro')\n",
+    "df_EI = df_EI.replace('Train', 'transit')\n",
+    "df_EI = df_EI.replace('Free Shuttle', 'transit')\n",
+    "df_EI = df_EI.replace('Bus', 'transit')\n",
+    "df_EI = df_EI.replace('Walk', 'walk')\n",
+    "df_EI = df_EI.replace('Taxi/Uber/Lyft', 'ridehail')\n",
+    "df_EI = df_EI.replace('Pilot ebike', 'ebike')\n",
+    "emission_rates = df_EI.groupby(['mode']).mean().reset_index()[['mode','energy_intensity_factor','CO2_factor']]\n",
+    "emission_rates['g_CO2_per_passmi'] = emission_rates.energy_intensity_factor*emission_rates.CO2_factor*0.000001*453.592\n",
+    "emission_data = plot_data.merge(emission_rates, left_on='Replaced_mode_new', right_on='mode')"
    ]
   },
   {
@@ -1647,6 +1660,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "emission_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From df_EI\n",
+    "emission_rates = emission_data.g_CO2_per_passmi.values\n",
+    "subst_rates = emission_data.subst_rate.values\n",
+    "\n",
+    "# g-CO2/mi reduction through ebike availability\n",
+    "sum(emission_rates * subst_rates) / sum(subst_rates) - 0.007"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From table in paper\n",
+    "emission_rates = [343.3, 18.5, 343.3, (343.3/2), 39.8, 123.8, 0.0]\n",
+    "subst_rates = plot_data['subst_rate'].values\n",
+    "\n",
     "# g-CO2/mi reduction through ebike availability\n",
     "sum(emission_rates * subst_rates) / sum(subst_rates) - 39.8"
    ]
